--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,7 +5,5 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+    <Grid x:Name="LayoutRoot" />
 </Window>
